--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,18 @@ description: A venir
 collections:
   authors:
     output: true
+defaults:
+  - scope:
+      path: ""
+      type: "authors"
+    values:
+      layout: "author"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
