--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: A venir
-description: A venir
+title: Site personel de Julien Zhou
+description: Site personel de Julien Zhou
 # logo: [Location of the logo]
 # show_downloads: ["true" or "false" to indicate whether to provide a download URL]
 # google_analytics: [Your Google Analytics tracking ID]
