--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,12 @@
   link: /
 - name: A propos
   link: /about.html
+- name: GitHub
+  link: https://github.com/JlnZhou
+- name: Twitter:
+  link: https://twitter.com/epicorz
+- name: LinkedIn
+  link: https://www.linkedin.com/in/julien-zhou
 - name: Blog
   link: /blog.html
 - name: Staff
