--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /about.html
 - name: GitHub
   link: https://github.com/JlnZhou
-- name: Twitter:
+- name: Twitter
   link: https://twitter.com/epicorz
 - name: LinkedIn
   link: https://www.linkedin.com/in/julien-zhou
